--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div class="footer"> Copyright © Ahmad Syaifuddin | 2023 All Right Reserved </div>
 
 
+    <!-- Toggle Navbar -->
     <script>
         function myFunction() {
             var x = document.getElementById("myTopnav");
